...
                                    <constraint firstAttribute="width" constant="200" id="grx-dT-YjC"/>
                                </constraints>
                                <state key="normal" image="plus"/>
                                <connections>
                                    <segue destination="Kb7-sc-EZi" kind="show" id="Tic-WW-WgZ"/>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Добавить запись " id="WAb-ws-MrB"/>
                    <navigationItem key="navigationItem" title="Добавить запись" id="3Uk-rG-RJE"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="D4p-Yr-AIp" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                    <constraint firstAttribute="height" constant="50" id="yp9-9G-HkW"/>
                                </constraints>
                                <state key="normal" title="Выход">
                                    <color key="titleColor" red="1" green="0.0" blue="0.037429042760000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="Nyu-t9-Voh"/>
                    <navigationItem key="navigationItem" title="Профиль" id="UD4-Za-hBa"/>
                    <connections>
                        <outlet property="Email" destination="k6a-Hj-kf9" id="flm-ca-6VJ"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                <state key="normal" title="Войти">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                        <rect key="frame" x="100" y="0.0" width="140" height="29"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <state key="normal" title="Зарегистрироваться"/>
                                        <connections>
                                            <segue destination="iZa-GC-HBY" kind="show" id="UV1-Ji-mka"/>
...
                        <viewLayoutGuide key="safeArea" id="XbF-a1-wd3"/>
                    </view>
                    <navigationItem key="navigationItem" title="Вход" id="q69-GT-ljb"/>
                    <connections>
                        <outlet property="login" destination="HOI-YR-EzZ" id="0me-Y6-QLa"/>
...
                        <viewLayoutGuide key="safeArea" id="eUW-EE-vmd"/>
                    </view>
                    <navigationItem key="navigationItem" title="Регистрация" id="MmF-nx-BkE">
                        <barButtonItem key="backBarButtonItem" title=" " id="jYz-wu-IVv"/>
                    </navigationItem>
...
