...
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="je5-Ks-y15"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Добавить запись " image="add" id="WAb-ws-MrB">
                        <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </tabBarItem>
                    <navigationItem key="navigationItem" title="Создание" id="3Uk-rG-RJE"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="D4p-Yr-AIp" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-834" y="1460"/>
        </scene>
        <!--Описание-->
...
                                <rect key="frame" x="16" y="364" width="343" height="50"/>
                                <color key="backgroundColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="svT-oH-F9H"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                <state key="normal" title="Сохранить изменения">
                                    <color key="titleColor" red="0.27058823529999998" green="0.6588235294" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="SaveChanges:" destination="2hX-dW-A0Y" eventType="touchUpInside" id="eFm-bN-BtX"/>
                                </connections>
                            </button>
...
