...
			}
			else{
				var title:String = String()
				var message:String = String()
				switch(requestResultByLogin.LoginState){
				case(.FailedWithInvalideLogin):
					title = "Неверные данные"
					message = "Проверьте логин и пароль"
					
				case(.FailedWithError):
					title = "Ошибка соединения"
					message = "Проверьте доступ к серверу"
				default:
...
